<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16sp">


        <!--Question1-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="18sp">

            <CheckBox
                android:id="@+id/question1_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_a"
                android:layout_centerHorizontal="true"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/question1_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_b"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <!--Question2-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp">
            <RadioButton
                android:id="@+id/question2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question2_a"
                android:onClick="onRadioButtonQuestion2"/>
            <RadioButton
                android:id="@+id/question2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question2_b"
                android:onClick="onRadioButtonQuestion2"/>
            <RadioButton
                android:id="@+id/question2_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question2_c"
                android:onClick="onRadioButtonQuestion2"/>
            <RadioButton
                android:id="@+id/question2_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question2_d"
                android:onClick="onRadioButtonQuestion2"
                android:layout_marginBottom="20dp"/>

        </RadioGroup>
        <!--Question3-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp">
            <RadioButton
                android:id="@+id/question3_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question3_a"
                android:onClick="onRadioButtonQuestion3"/>
            <RadioButton
                android:id="@+id/question3_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question3_b"
                android:onClick="onRadioButtonQuestion3"/>
            <RadioButton
                android:id="@+id/question3_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question3_c"
                android:onClick="onRadioButtonQuestion3"/>
            <RadioButton
                android:id="@+id/question3_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question3_d"
                android:onClick="onRadioButtonQuestion3"
                android:layout_marginBottom="20dp"/>

        </RadioGroup>

        <!--Question4-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp">
            <RadioButton
                android:id="@+id/question4_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question4_a"
                android:onClick="onRadioButtonQuestion4"/>
            <RadioButton
                android:id="@+id/question4_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question4_b"
                android:onClick="onRadioButtonQuestion4"/>
            <RadioButton
                android:id="@+id/question4_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question4_c"
                android:onClick="onRadioButtonQuestion4"/>
            <RadioButton
                android:id="@+id/question4_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question4_d"
                android:onClick="onRadioButtonQuestion4"
                android:layout_marginBottom="20dp"/>

        </RadioGroup>

        <!--Question5-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp">
            <RadioButton
                android:id="@+id/question5_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question5_a"
                android:onClick="onRadioButtonQuestion5"/>
            <RadioButton
                android:id="@+id/question5_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question5_b"
                android:onClick="onRadioButtonQuestion5"/>
            <RadioButton
                android:id="@+id/question5_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question5_c"
                android:onClick="onRadioButtonQuestion5"/>
            <RadioButton
                android:id="@+id/question5_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/question5_d"
                android:onClick="onRadioButtonQuestion5"
                android:layout_marginBottom="20dp"/>

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_weight=".8"
            android:scaleType="centerCrop"
            android:src="@drawable/lotus1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColor="#FFFFFF"
            android:background="#912139"
            android:onClick="submitAnswers"
            android:text="@string/submitAnswers"/>

        <TextView
            android:id="@+id/textViewDataUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewDisplayAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16sp"
            android:textSize="16sp"
            android:background="#DE6E88"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>