<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_weight=".8"
                android:scaleType="centerCrop"
                android:src="@drawable/lotus7"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signup"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="#de6e88"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="submit"
                android:background="#DE6E88"
                android:textColor="#FFFFff"
                android:text="@string/submit"/>

            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>